# scrapegraph-sdk

./: .gitignore  .releaserc.json  .releaserc.yml  .stats.yml  CHANGELOG.MD  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HEALTHCHECK.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  TOON_INTEGRATION_SUMMARY.md  aliases.go  api-keys-to-remove.txt  api.md  client.go  client_test.go  codebeaver.yml  credit.go  credit_test.go  feedback.go  feedback_test.go  field.go  generateschema.go  generateschema_test.go  go.mod  markdownify.go  markdownify_test.go  package.json  pyproject.toml  readme.md  searchscraper.go  searchscraper_test.go  smartcrawler.go  smartcrawler_test.go  smartcrawlersession.go  smartcrawlersession_test.go  smartscraper.go  (+5 more)
scrapegraph-py/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  test_htmlfy_integration.py  test_schema_generation.py
scrapegraph-py/cookbook/: trial.py
scrapegraph-py/cookbook/company-info/: scrapegraph_llama_index.ipynb
scrapegraph-py/cookbook/github-trending/: a.py  scrapegraph_llama_index.ipynb
scrapegraph-py/cookbook/homes-forsale/: scrapegraph_llama_index.ipynb
scrapegraph-py/cookbook/wired-news/: a.py
scrapegraph-py/examples/: feedback_example.py  local_scraper_example.py  scrape_example.py  scrape_schema_example.py  smartscraper_example.py  smartscraper_schema_async_example.py  toon_async_example.py  toon_example.py
scrapegraph-py/examples/async/: async_crawl_markdown_example.py  async_htmlfy_example.py  async_markdownify_steps_example.py  async_smartscraper_cookies_example.py  async_smartscraper_infinite_scroll_example.py  async_smartscraper_steps_example.py  (+2 more)
scrapegraph-py/scrapegraph_py/: __init__.py  async_client.py  client.py  credits.py  exceptions.py  feedback.py  local_scraper.py  scrape.py
scrapegraph-py/tests/: test_async_client.py  test_client.py  test_comprehensive_apis.py  test_credits.py  test_feedback.py  test_htmlfy_models.py  test_mocked_apis.py  test_models.py  test_real_apis.py  test_schema_generation.py  test_schema_models.py
(+208 files in other folders)
