[tool.poetry]
name = "scrapegraph-py"
version = "1.0.0"
description = "Python client for ScrapeGraph API"
authors = ["Marco Perini <perinim.98@gmail.com>", "Marco Vinciguerra <mvincig11@gmail.com>", "Lorenzo Padoan <lorenzo.padoan977@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://scrapegraphai.com/"
repository = "https://github.com/EURAC-EEBgroup/scrapegraph-py"
documentation = "https://scrapegraphai.com/docs"
keywords = [
    "scrapegraph",
    "scraper",
    "scraping",
    "web scraping",
    "ai",
    "artificial intelligence",
    "gpt",
    "machine learning",
    "natural language processing",
    "nlp",
    "openai",
    "graph",
]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

packages = [{include = "scrapegraph_py"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "2.10.2"
aiohttp = "3.11.8"
requests = "2.32.3"
validators = "0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "*"
aioresponses = "*"
responses = "*"
pytest-sugar = "*"
pytest-cov = "*"
black = "*"
mypy = "*"
ruff = "*"
isort = "*"
pre-commit = "*"
types-setuptools = "^75.1.0.20240917"
mkdocs = "^1.5"
mkdocs-material = "^9.2"
mkdocstrings-python = "^1.1"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "C"]
ignore = ["E203", "E501"]  # Ignore conflicts with Black

[tool.mypy]
python_version = "3.9"
strict = true
disallow_untyped_calls = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest==8.0.0",
    "pytest-mock==3.14.0",
    "pylint>=3.2.5",
    "poethepoet>=0.31.1",
]

